--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -882,11 +882,11 @@ a:hover {text-decoration: none;}
   position: relative;
 }
 .banner-cards .title-card h3 {
-  width: 105%;
+  width: calc(100% + 20px);
   background-color: #A5A5A5;
   text-align: center;
   position: relative;
-  transform: translateX(15px);
+  transform: translateX(20px);
   padding: 10px 16px;
   color: #fff;
   font-size: 1.4em;
@@ -905,8 +905,9 @@ a:hover {text-decoration: none;}
   position: absolute;
   right: 0;
   top: -16px;
-  width: 0;
-  border: 8px solid;
+  width: 15px;
+  height: 15px;
+  border: 10px solid;
 }
 .banner-cards .title-card h3:before {
   border-top-color: transparent;
@@ -915,7 +916,7 @@ a:hover {text-decoration: none;}
   border-left-color: transparent;
 }
 .banner-cards .title-card h3:after {
-  top: 55px;
+  top: 100%;
   bottom: 0;
   right: 0px;
 }
@@ -1240,7 +1241,12 @@ li.glide__slide.glide__slide--active .sider-items .quote-icon {color: var(--main
 }
 .card-ele:hover .main-color {color: #FFF !important}
 .card-ele:hover .sub-color {color: #FFF !important}
-.card-img {position: relative; top: -80px;}
+.card-img {position: relative;}
+.card-img img{
+  max-width: 100%;
+  min-width: 100%;
+  height: 200px;
+}
 img[alt="Human"] {
   max-height: 200px;
 }
