--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -106,6 +106,7 @@ a:hover {text-decoration: none;}
 .min-height-360 {min-height: 360px;}
 .min-height-300 {min-height: 300px;}
 .min-height-490{min-height: 490px;} 
+.min-height-410{min-height: 410px;} 
 .max-height-100 {max-height: 100px;}
 .max-height-80 {max-height: 80px;}
 .max-height-50 {max-height: 50px;}
