--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -232,8 +232,7 @@ a:hover {text-decoration: none;}
   content: '';
   width: 100%;
   height: 100%;
-  background-color: #4a3985;
-  opacity: 0.5;
+  background-color: rgba(74, 57, 133, .6);
   position: absolute;
   top: 0; left: 0;
   z-index: 1
@@ -644,7 +643,7 @@ a:hover {text-decoration: none;}
   height: 170px;
   overflow: auto;
   padding: 0 10px;
-  min-width: 14rem;
+  min-width: 12rem;
   direction: ltr;
 }
 .sm-scroll a {
@@ -824,9 +823,7 @@ a:hover {text-decoration: none;}
 }
 .banner-image {
   height: 500px;
-  background-image: url('../images/BGMain.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url('../images/bg.png');
 }
 .main-banner .banner-info,
 .about-wrapper {
