--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -15,6 +15,7 @@ body, html {
 :root {
   /* #4A3985 */
   --main-color: #4b3a85;
+  --main-color-light : #816cc8;
   --sub-color: #2bc3cc;
   --light-sub-color: #addfe6;
   --main-color-rgba: rgba(75,58,133, .8);
