add empty data ui fix search layout

--- a/src/components/booklet-for-sell/styles.sass
+++ b/src/components/booklet-for-sell/styles.sass
@@ -5,6 +5,9 @@
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
     height: 100px
     padding: 10px 15px 10px 15px
+
+.booklet-wrapper
+    min-height: 59vh;
 .competition-box
     position: relative
     background: #fff
@@ -18,6 +21,14 @@
     background-repeat: no-repeat
     background-position: top center
     margin-bottom: 45px 
+
+.input-search-icon
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    opacity: 0.5
+    transform: translateY(-50%)
+
     .box-img
         position: absolute
         background: #fff
