ui enhancments for booklet page

--- a/src/components/hemma-success/success-cases/success-card/index.scss
+++ b/src/components/hemma-success/success-cases/success-card/index.scss
@@ -1,16 +1,20 @@
 .status-card {
-    width: 100%;
-    border: 3px solid var(--main-color-light);
-    position: relative;
-    padding: 10px 20px;
-    border-radius: 10px;    
-    margin-bottom: 25px;
+  width: 100%;
+  border: 3px solid var(--main-color-light);
+  position: relative;
+  padding: 20px 20px;
+  border-radius: 10px;
+  margin-bottom: 25px;
 
-    & .quote-icon{
-       color: var(--main-color-light) !important;
-    }
+  & .quote-icon {
+    color: var(--main-color-light) !important;
+  }
 }
 
 .main-color-light {
-    color: var(--main-color-light);
+  color: var(--main-color-light);
+}
+
+.flex-1 {
+  flex: 1;
 }
