fix ui isssue at intercom

--- a/src/indexNew.sass
+++ b/src/indexNew.sass
@@ -36,6 +36,14 @@
   z-index: 1
 }
 
+  .intercom-chat-card{
+    margin-left: 0 !important;
+    }
+
+      iframe.intercom-borderless-frame{
+        width: 25%
+        }
+
 .line-yellow {position: relative; display: inline-block;}
 .line-yellow:after {
   content: '';
