--- a/src/index.sass
+++ b/src/index.sass
@@ -12,6 +12,7 @@ $light-purple: #ddd6f2
 $light-yellow: #FDE67B
 $ultra-blue: #249db0
 $green-text: #199f8f
+$main-color-ligh: #816cc8;
 
 @font-face
     font-family: GessLight
