fix img issues in booklet ui

--- a/src/components/shared/bookletCard/index.scss
+++ b/src/components/shared/bookletCard/index.scss
@@ -20,6 +20,11 @@
         transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 }
+
+
+.h-250{
+  height: 250px !important;
+}
 .font-bold{
 font-weight: bold !important;
 }
