--- a/src/components/categories/professional-license/courses/course/index.scss
+++ b/src/components/categories/professional-license/courses/course/index.scss
@@ -24,6 +24,10 @@
   color: #fff !important;
 }
 
+.modal-closing-btn{
+  z-index: 10;
+}
+
 .play-video-btn {
   position: absolute;
   z-index: 2;
