HEMMA-665 fix Student Interface exam/training pages

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -225,7 +225,7 @@
   height: 100% !important
 .visualizer
   display: none !important
-.ball-spin-fade-loader > div,
+.ball-spin-fade-loader > div
   background-color: #4b3a85 !important
 .ball-clip-rotate> div
   border: 2px solid #9786d2 !important
@@ -272,17 +272,15 @@ audio:focus
   overflow: auto
 .slick-center
   background-color: #f2f2f2
-.question-item
-  .slick-slider
-    .slick-prev
-      left: -10px
-      background: white
-    .slick-next
-      right: -10px
-      background: white
-    .slick-prev:before, .slick-next:before
-      color: #2bc3cc
-      opacity: 1
+.page-link:hover
+  color: #000 !important
+  background-color: white !important
+
+
+.wrapper-pagination
+    display: flex
+    justify-content: center
+    align-items: center
 .hint-badge
   position: absolute
   top: -10px
