add disable classses and flex--root class

--- a/src/components/booklet-for-sell/index.scss
+++ b/src/components/booklet-for-sell/index.scss
@@ -11,6 +11,10 @@
     grid-gap: 1rem;
 }
 
+.flex-root{
+    flex: 1 !important;
+}
+
 .booklet-details{
     & .booklet-tag{
         width: 130px;
