--- a/src/indexNew.sass
+++ b/src/indexNew.sass
@@ -9,6 +9,7 @@
 .bordered {border: 1px solid var(--main-color)}
 
 .font-size-14 {font-size: 14px;}
+.font-size-12 {font-size: 12px;}
 .text-shadow {text-shadow: 0 3px rgba(0,0,0, .3)}
 .title-shadow-purple { text-shadow: 0 0 3px rgb(75 58 133 / 50%)}
 .description-card {font-size: 18px}
