fix over sized text that goes outside the container in exams

--- a/src/components/account/subscriptions/index.scss
+++ b/src/components/account/subscriptions/index.scss
@@ -3,3 +3,10 @@
         max-height: 50vh !important;
     }
 }
+
+.encoded-text{
+    & p{
+        max-width: 100% !important;
+        word-wrap: break-word !important;
+    }
+}
