--- a/src/components/account/subscriptions/index.scss
+++ b/src/components/account/subscriptions/index.scss
@@ -7,6 +7,7 @@
 .encoded-text{
     & p{
         max-width: 100% !important;
-        word-wrap: break-word !important;
+        word-break: break-word !important;
+        white-space: normal;
     }
 }
