fix img width add some styles

--- a/src/components/account/shared/sidebar/index.scss
+++ b/src/components/account/shared/sidebar/index.scss
@@ -41,4 +41,11 @@ card-header {
 
 .courses-features li a.active {
   color: var(--sub-color);
+  & svg{
+    stroke: var(--sub-color);
+  }
+}
+
+.sidebar .sidebar-list ul > li > a.active {
+border-right: none !important; 
 }
