--- a/src/components/account/subscriptions/index.scss
+++ b/src/components/account/subscriptions/index.scss
@@ -15,3 +15,9 @@
     word-wrap: break-word !important;
   }
 }
+
+@media (max-width: 767px) {
+  & .fill-at-mobile {
+    width: 100% !important;
+  }
+}
