--- a/src/components/home/main.css
+++ b/src/components/home/main.css
@@ -35,4 +35,96 @@
   font-weight: 100;
 }
 
+.container-popup {
+  border-radius: 45px;
+  background: url("/assets/images/modalImg.png") no-repeat;
+  height: 70%;
+}
+.container-popup h4 {
+  color: #8375B8;
+  font-weight: bold;
+  font-size: 20px;
+  opacity: 1;
+}
+.container-popup p {
+  color: #707070;
+  font-size: 18px;
+}
+.container-popup label {
+  color: #5CB6D2;
+}
+.container-popup .btn {
+  border-radius: 22px;
+  padding: 6px !important;
+  font-size: 12px;
+}
+
+.modal-dialog-centered {
+  max-width: 860px !important;
+}
+
+.model-title {
+  text-align: center !important;
+  display: block;
+  padding-bottom: 10px;
+  color: #8375B8;
+  font-weight: bold;
+  font-family: "Almarai";
+  font-size: 34px;
+  border-bottom: 0;
+}
+
+.modal-header {
+  text-align: center !important;
+  display: block !important;
+  padding: 0rem 1rem !important;
+  border-bottom: 0 !important;
+}
+.modal-header .close {
+  margin: -6rem auto -1rem -1rem !important;
+  color: #8375B8 !important;
+  font-size: 3.5rem;
+}
+
+.modal-content {
+  border-radius: 45px;
+}
+
+.choose-specialization-wrapper {
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  padding: 15px;
+  border: 1px solid #7070701C;
+}
+
+.content-why {
+  border-radius: 20px;
+  background-color: #FFFFFF;
+}
+
+.content-invitation {
+  border-radius: 20px;
+  background-color: #FFFFFF;
+}
+.content-invitation span {
+  color: #5CB6D2;
+  font-size: 16px;
+}
+
+.choose-specialization {
+  display: flex;
+  justify-content: space-between;
+}
+.choose-specialization select {
+  border: 1px solid #70707033;
+  border-radius: 18px;
+  width: 60%;
+  height: 32px;
+  outline: none;
+}
+
+.box {
+  height: 22rem;
+}
+
 /*# sourceMappingURL=main.css.map */
