--- a/src/components/home/main.sass
+++ b/src/components/home/main.sass
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap')
 
+$bg-img: url("/assets/images/modalImg.png")
+
 .banner-program
   background-color: #D7F7F7
 
@@ -33,3 +35,101 @@
       left: 9px
       font-weight: 100
 
+.container-popup
+  border-radius: 45px
+  background: $bg-img no-repeat
+  height: 70%
+
+  h4
+    color: #8375B8
+    font-weight: bold
+    font-size: 20px
+    opacity: 1
+
+  p
+    color: #707070
+    font-size: 18px
+
+  label
+    color: #5CB6D2
+
+  .btn
+    border-radius: 22px
+    padding: 6px !important
+    font-size: 12px
+
+.modal-dialog-centered
+  max-width: 860px !important
+
+.model-title
+  text-align: center !important
+  display: block
+  padding-bottom: 10px
+  color: #8375B8
+  font-weight: bold
+  font-family: 'Almarai'
+  font-size: 34px
+  border-bottom: 0
+
+.modal-header
+   text-align: center !important
+   display: block !important
+   padding: 0rem 1rem !important
+   border-bottom: 0 !important
+
+   .close
+     margin: -6rem auto -1rem -1rem !important
+     color: #8375B8 !important
+     font-size: 3.5rem
+
+.modal-content
+  border-radius: 45px
+
+.choose-specialization-wrapper
+  border-radius: 20px
+  background-color: #FFFFFF
+  padding: 15px
+  border: 1px solid #7070701C
+
+.content-why
+  border-radius: 20px
+  background-color: #FFFFFF
+
+
+.content-invitation
+  border-radius: 20px
+  background-color: #FFFFFF
+
+  span
+      color: #5CB6D2
+      font-size: 16px
+
+.choose-specialization
+  display: flex
+  justify-content: space-between
+
+  select
+    border: 1px solid #70707033
+    border-radius: 18px
+    width: 60%
+    height: 32px
+    outline: none
+    //background-image: linear-gradient(45deg, transparent 50%, blue 50%),linear-gradient(135deg, blue 50%, transparent 50%),linear-gradient(to right, skyblue, skyblue)
+    //background-position: calc(100% - 20px) calc(1em + 2px),calc(100% - 15px) calc(1em + 2px), 100% 0
+    //background-size: 5px 5px, 5px 5px, 2.5em 2.5em
+    //background-repeat: no-repeat
+    //
+    //
+    //&:focus
+    //  background-image: linear-gradient(45deg, white 50%, transparent 50%),linear-gradient(135deg, transparent 50%, white 50%),linear-gradient(to right, gray, gray)
+    //  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0
+    //  background-size: 5px 5px, 5px 5px, 2.5em 2.5em
+    //  background-repeat: no-repeat
+    //  border-color: grey
+    //  outline: 0
+
+
+
+
+.box
+  height: 22rem
