HEMMA-1009 changes fonts

--- a/public/assets/css/converted.css
+++ b/public/assets/css/converted.css
@@ -275,9 +275,9 @@ a:hover, a:focus, a:active {
 	background-color: #fefefe;
 }
 
-.light-font-text {
-	font-family: GessLight;
-}
+/*.light-font-text {*/
+/*	font-family: GessLight;*/
+/*}*/
 
 .cover-img {
 	object-fit: cover;
