--- a/src/components/courses/styles.sass
+++ b/src/components/courses/styles.sass
@@ -204,5 +204,14 @@ $silver: #d7d7d7
 
 
     
-
-   
+.details-link
+  font-size: 1.6rem !important
+.details-title
+  font-size: 2.5rem !important
+.details-para
+  font-size: 1.1rem !important
+.section-name
+  font-size: 15px !important
+.list-title
+  font-size: 19px
+  font-weight: bold
