--- a/src/index.sass
+++ b/src/index.sass
@@ -165,8 +165,8 @@ p
     color: $light-purple
 .off-white-bg
     background-color: $off-white
-.light-font-text
-    font-family: GessLight
+//.light-font-text
+//    font-family: GessLight
 .cover-img
     object-fit: cover
     object-position: left
