--- a/src/components/booklet-for-sell/index.scss
+++ b/src/components/booklet-for-sell/index.scss
@@ -42,7 +42,9 @@
 .font-lg{
     font-size: 1.25rem !important;
 }
-
+.font-xlg{
+    font-size: 1.5rem !important;
+}
 .py-2-5{
     padding-top: 0.75rem !important;
     padding-bottom: 0.75rem !important;
