booklet delivery validation fix

--- a/src/components/cart/checkout.styles.sass
+++ b/src/components/cart/checkout.styles.sass
@@ -29,12 +29,12 @@ $off-white: #fefefe
     font-size: 13px
 .custom-tabs
     .nav-item
-        width: 50%
         text-align: center
         font-family: GessLight
         font-size: 13px
         color: $light-blue
         cursor: pointer
+        flex: 1
         .nav-link
             &:hover
                 border: 1px solid transparent
