add validation to landing

--- a/src/landing-pages/campaign-marketing/form/field/index.scss
+++ b/src/landing-pages/campaign-marketing/form/field/index.scss
@@ -4,7 +4,7 @@
         border-radius: 5px;
         border-color: #f4f4f4;
         box-shadow: none;
-        border: none;
+        border: 1px solid #ddd;
         
         &::placeholder{
             color: #000;
