apply design switcher

--- a/src/components/account/shared/sidebar/index.scss
+++ b/src/components/account/shared/sidebar/index.scss
@@ -11,6 +11,14 @@
   margin-left: 20px;
 }
 card-header {
+  background-color: #7f72a7;
+  cursor: pointer;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  height: 45px;
+  display: flex;
+  align-items: center;
   &:first-child {
     border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
   }
