--- a/src/components/faq/style.sass
+++ b/src/components/faq/style.sass
@@ -21,6 +21,12 @@
       -moz-transition: all 0.3s ease 0s
       -o-transition: all 0.3s ease 0s
       transition: all 0.3s ease 0s
+      background-color: #7f72a7
+      cursor: pointer
+      width: 100%
+      height: 45px
+      display: flex
+      align-items: center
       &:hover
         background: #f7f7f7
         padding-left: 10px
