change the category id and simple ui fix

--- a/src/landing-pages/campaign-marketing/form/field/index.scss
+++ b/src/landing-pages/campaign-marketing/form/field/index.scss
@@ -7,7 +7,7 @@
         border: 1px solid #ddd;
         
         &::placeholder{
-            color: #000;
+            color: #ddd;
         }
 
         &:focus{
