--- a/src/components/account/subscriptions/ask-questions/index.scss
+++ b/src/components/account/subscriptions/ask-questions/index.scss
@@ -2,7 +2,7 @@
     & li,a{
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: stretch;
         &.active{
             &  h6{
                 background-color: #4b3a85;
