--- a/src/landing-pages/campaign-marketing/index.scss
+++ b/src/landing-pages/campaign-marketing/index.scss
@@ -30,10 +30,10 @@ table {
   }
 
   p  img{
-    max-width: 10%;
-    @media (max-width: 1000px) {
-      width: 50% !important;
-    }
+    width:  auto !important;
+    height:auto !important;
+    max-width: 100%;
+    object-fit: contain !important;
   }
 }
 
