evaluation style fixes

--- a/src/components/evaluation/index.scss
+++ b/src/components/evaluation/index.scss
@@ -23,6 +23,7 @@
   & .table-title-container {
     border-color: #a0e1e5 !important;
     & .rate-item {
+      height: 60px;
       font-weight: bold;
       color: #707070;
     }
@@ -32,6 +33,7 @@
   }
 
   & .star-size {
+    height: 60px;
     font-size: 24px;
   }
 
