evaluation button styles

--- a/src/components/account/shared/sidebar/index.scss
+++ b/src/components/account/shared/sidebar/index.scss
@@ -57,3 +57,12 @@ card-header {
 .sidebar .sidebar-list ul > li > a.active {
 border-right: none !important; 
 }
+.rate-course-btn{
+  background-color: #32C3CB;
+  border-radius: 20px;
+  height: 60px;
+  cursor: pointer;
+}
+.rate-course-btn-text{
+  color: #fff;
+}
