add new styles for rating container

--- a/src/components/evaluation/index.scss
+++ b/src/components/evaluation/index.scss
@@ -1,4 +1,4 @@
-.rate-title{
+.rate-title {
   font-size: 30px;
   color: #4b3a85;
 }
@@ -16,6 +16,9 @@
       color: #707070;
     }
   }
+}
+.loader-container {
+  height: 300px;
 }
 
 .table-container {
