change home help hint

--- a/src/components/home/main.sass
+++ b/src/components/home/main.sass
@@ -15,10 +15,10 @@ $bg-img: url("/assets/images/modalImg.png")
 
   .join-now
     border-radius: 2em
-    background: #FFE452
-    border-color: #FFE452
-    width: 6.5rem
-    height: 3rem
+    background: #28a745
+    border-color: #28a745
+    width: 4rem
+    height: 4rem
 
 
   .program-name
