--- a/src/components/privacypolicy/index.scss
+++ b/src/components/privacypolicy/index.scss
@@ -7,3 +7,28 @@
     }
   }
 }
+
+.sections-title {
+  font-size: 20px;
+  &:hover {
+    color: #4472c4;
+  }
+}
+
+.section {
+  & .section-title {
+    color: #4472c4;
+  }
+  & .section-title1 {
+    color: #4472c4;
+  }
+  & .section-descriptions {
+    line-height: 40px;
+    font-size: 18px;
+  }
+}
+
+.table-title {
+  background-color: #4472c4;
+  color: #fff;
+}
