--- a/src/components/privacypolicy/index.scss
+++ b/src/components/privacypolicy/index.scss
@@ -25,6 +25,9 @@
   & .section-descriptions {
     line-height: 40px;
     font-size: 18px;
+    @media (max-width: 700px) {
+       font-size: 15px;
+    }
   }
 }
 
