--- a/src/components/categories/index.scss
+++ b/src/components/categories/index.scss
@@ -9,6 +9,12 @@
     width: 52.39px;
     position: absolute;
     right: 20%;
+    object-fit: contain;
+    @media (max-width: 700px) {
+      right: 10%;
+      height: 35.56px;
+      width: 28.39px;
+    }
   }
   & .join-free-meeting-btn{
     color: #4A3985;
