fix issue with responsive screen on mobile view

--- a/public/assets/css/converted.css
+++ b/public/assets/css/converted.css
@@ -356,7 +356,7 @@ form input.form-control {
 	height: 40px;
 	border-radius: 5px;
 	border: 1px solid #dbdbdb;
-	font-size: 13px;
+	/* font-size: 13px; */
 }
 
 form select.form-control {
