--- a/src/components/ScheduleDates/index.scss
+++ b/src/components/ScheduleDates/index.scss
@@ -14,11 +14,13 @@
     & .card-date {
       color: #fff;
       font-size: 23px;
+      margin-top: 0px;
     }
     & .card-title {
       font-size: 31px;
       font-weight: bold;
       color: #fff;
+      margin-top: 1rem;
     }
     & .card-footer {
       border-radius: 0px 0px 26px 26px;
